--- a/src/main/resources/templates/mall/my-orders.html
+++ b/src/main/resources/templates/mall/my-orders.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="mall/header::head-fragment('NewBee商城-订单列表','my-orders')">
+<head th:replace="mall/header::head-fragment('NewBee教育-订单列表','my-orders')">
 </head>
 <body>
 <header th:replace="mall/header::header-fragment"></header>
